[package]
name = "tgbot"
version = "0.1.0"
authors = ["dracarys18 <karthihegde010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version="0.5",features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros","time"] }
tokio-stream = "0.1.6"
mongodb = "2.0.0-beta.2"
anyhow = "1.0.42"
lazy_static = "1.4.0"
async_once = "0.2.1"
dotenv = "0.15.0"
reqwest = {version="0.11.4",features= ["json"]}
serde = {version = "1.0.126",features = ["derive"]}
serde_json = "1.0.64"
regex = "1.5.4"
mime = "0.3.16"
chrono = "0.4"