[package]
name = "tgbot"
version = "0.1.0"
authors = ["dracarys18 <karthihegde010@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async_once = "0.2.6"
chrono = "0.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.8"
mime = "0.3.16"
mongodb = "2.1.0"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
teloxide = { version = "0.5.3", features = ["auto-send", "macros"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros","time"] }
tokio-stream = "0.1.8"
